--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/finartz?createDatabaseIfNotExi
 spring.datasource.username=root
 spring.datasource.password=passwrd
 
-spring.data.mongodb.uri=mongodb://r00t:p5wrd@localhost:27000/finartz
+spring.data.mongodb.uri=mongodb://rOOt:p5wrd@localhost:27000/finartz
 spring.data.mongodb.authentication-database=admin
