added new tests

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -13,4 +13,4 @@ spring.data.mongodb.authentication-database=integration
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=create-drop
-# spring.jpa.show-sql=true
+spring.jpa.show-sql=false
