finished message control mechanism. fixed minor bugs.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,13 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://remotemysql.com:3306/N3O90LvObU?useSSL=false
-spring.datasource.username=N3O90LvObU
-spring.datasource.password=VEu9HAbXMX
-# spring.datasource.url=jdbc:mysql://localhost:3306/finartz?createDatabaseIfNotExist=true
-# spring.datasource.username=root
-# spring.datasource.password=passwrd
+# spring.datasource.url=jdbc:mysql://remotemysql.com:3306/N3O90LvObU?useSSL=false
+# spring.datasource.username=N3O90LvObU
+# spring.datasource.password=VEu9HAbXMX
+spring.datasource.url=jdbc:mysql://localhost:3306/finartz?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=passwrd
 
-spring.data.mongodb.uri=mongodb+srv://rOOt:<password>@finartz-cyrlp.mongodb.net/finartz?retryWrites=true&w=majority
-# spring.data.mongodb.uri=mongodb://rOOt:p5wrd@localhost:27000/test
+# spring.data.mongodb.uri=mongodb+srv://rOOt:<password>@finartz-cyrlp.mongodb.net/finartz?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb://rOOt:p5wrd@localhost:27000/test
 spring.data.mongodb.authentication-database=admin
